load("@rules_cc//cc:defs.bzl", "cc_binary")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

cc_binary(
    name = "read_bazel_runfiles",
    srcs = ["main.cc"],
    copts = ONE_DEFAULT_COPTS,
    data = ["lipsum.txt"],
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        "//gtl:macros",
        "//gtl:posix_file_system",
        "@bazel_tools//tools/cpp/runfiles",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/absl/status",
        "//third_party/absl/strings",
    ],
)
