load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
    "ONE_TEST_COPTS",
)

cc_library(
    name = "circular_deque",
    hdrs = ["circular_deque.h"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":vector_buffer",
        "//gtl:macros",
        "//gtl:stl_util",
        "//gtl:template_util",
        "//third_party/glog",
    ],
)

cc_test(
    name = "circular_deque_test",
    srcs = ["circular_deque_unittest.cc"],
    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        ":circular_deque",
        "//gtl/test:copy_only_int",
        "//gtl/test:move_only_int",
        "//third_party/googletest:gtest_main",
    ],
)

cc_library(
    name = "id_map",
    hdrs = ["id_map.h"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//gtl:sequence_checker",
        "//third_party/glog",
        "//third_party/absl/container:flat_hash_set",
    ],
)

cc_test(
    name = "id_map_test",
    srcs = ["id_map_unittest.cc"],
    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS + select({
        "//bazel:llvm_compiler": ["-Werror=thread-safety-analysis"],
        "//conditions:default": [],
    }),
    defines = ["UNIT_TEST"],
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        ":id_map",
        "//gtl/test:gtest_util",
        "//third_party/googletest:gtest_main",
    ],
)

cc_library(
    name = "ring_buffer",
    hdrs = ["ring_buffer.h"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/glog",
    ],
)

cc_library(
    name = "util",
    hdrs = ["util.h"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
)

cc_library(
    name = "vector_buffer",
    hdrs = ["vector_buffer.h"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":util",
        "//gtl:template_util",
        "//gtl/numeric:checked_math",
        "//third_party/glog",
    ],
)

cc_test(
    name = "vector_buffer_test",
    srcs = ["vector_buffer_unittest.cc"],
    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        ":vector_buffer",
        "//gtl/test:copy_only_int",
        "//gtl/test:gtest_util",
        "//gtl/test:move_only_int",
        "//third_party/googletest:gtest_main",
    ],
)
